# AeroForge

./: .env  .env.template  .gitignore  README.md  deploy_to_vertex.sh  mock.tdb  pyproject.toml  requirements.txt  validate_structure.py
.kiro/specs/aeroforge-autonomous-alloy-discovery/: .config.kiro  design.md  requirements.md  tasks.md
reports/: executive_briefing.txt
src/: config.py  main_workflow.py  models.py
src/agents/: composition_loop.py  orchestrators.py  researcher.py
src/synthesis/: multimodal_reporter.py
src/tools/: fea_simulation.py  thermodynamics.py
tests/: test_models.py  test_thermodynamics.py  test_workflow.py
